fix test setup
Signed-off-by: Marc Handalian <marc.handalian@gmail.com>